--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 yew = "0.17"
 wasm-bindgen = "0.2.68"
+rocket = "0.4.6"
+
+[dependencies.rocket_contrib]
+version = "0.4.6"
+default-features = false
+features = ["tera_templates", "serve"]
